despliegue/service-mesh-ingress.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: manage-files-nacham-mtls
spec:
  mtls:
    mode: PERMISSIVE
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: manage-files-nacham-client-mtls
spec:
  host: manage-files-nacham
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: manage-files-nacham-virtualservice
spec:
  hosts:
  - '*'
  gateways:
  - istio-system/wildcard-gateway
  http:
  - match:
    - uri:
        regex: /api/files-nacham/.*
    route:
    - destination:
        port:
          number: 8080
        host: manage-files-nacham
